--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 </head>
 <body>
-https://diclotrans.com/redirect?id=28788&auth=84c758e387d7072ba3cdc0ecbb063ab50875945a
+<script type="text/javascript" src="https://cdn.diclotrans.com/sdk/v1/28789/94cfb8472ccff99ca8be7e47f582f17118d8f733/lib.js"></script>
 <div id="navbar"></div>
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
 <a class="my-0 mr-md-auto font-weight-normal fl" rel="home" href="/">
@@ -132,6 +132,6 @@ eventos();
 window.setInterval(function() { eventos(); }, 60000);
 </script>
 
-
+<script type="text/javascript" src="https://cdn.diclotrans.com/sdk/v1/28789/94cfb8472ccff99ca8be7e47f582f17118d8f733/lib.js"></script>
 </body>
 </html>
