--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!doctype html>
 <html lang="es">
 <head>
+	<script type="text/javascript" src="https://cdn.diclotrans.com/sdk/v1/28794/e09cd2131ff4aef2f780ba464118e4917c41fdbc/lib.js"></script>
 	<meta name="site-verification" content="5aaef3263c0ce516c90dd1cc190bae18"/>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
