--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <!doctype html>
 <html lang="es">
 <head>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7806120346230332"
+     crossorigin="anonymous"></script>
 	
-	<meta name="site-verification" content="5aaef3263c0ce516c90dd1cc190bae18"/>
+	
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Ver Star Plus online en VIVO y en directo. Fútbol Play TV</title>
