--- a/index.html
+++ b/index.html
@@ -214,9 +214,9 @@
                         let nurl = url.replace("/embed/eventos/?r=", "");
                         nurl = atob(nurl);
                         let wurl = nurl.replace("", "");
-                        wurl = "//futbollibreonline.pe/star_jwp.html?get=" + wurl;
+                        wurl = "//futbolparaguayotv.github.io/star_jwp.html?get=" + wurl;
                         let furl = btoa(wurl);
-                        url = "//futbollibreonline.pe/star.html?r=" + furl;
+                        url = "//futbolparaguayotv.github.io/star.html?r=" + furl;
                     }
 
                     if (obj['status'] == "EN VIVO") {
