--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
                         let nurl = url.replace("/embed/eventos/?r=", "");
                         nurl = atob(nurl);
                         let wurl = nurl.replace("", "");
-                        wurl = "//futbollibreonline.pe/star_jwp.html?get=" + wurl;
+                        wurl = "//funny-busy-botany.glitch.me/star_jwp.html?get=" + wurl;
                         let furl = btoa(wurl);
                         url = "//futbolparaguayotv.github.io/star.html?r=" + furl;
                     }
