--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         var x = Math.random().toString(36).substring(7);
 
         $.ajax({
-            url: "https://corsproxy.io/?url=https://todopelotatv.live/json/starplus.json?uegnd" + x,
+            url: "https://corsproxy.io/?url=https://todopelotatv.net/json/starplus.json?uegnd" + x,
             type: "get",
             success: function (arr) {
                 // Ordenar los eventos: primero EN VIVO, luego los demás
