--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                 <div class="col-lg-8">
                     <!-- Featured blog post-->
                     <div class="card mb-4">
-                        <a href="#!"><img class="card-img-top" src="https://dummyimage.com/850x350/dee2e6/6c757d.jpg" alt="..." /></a>
+                        <a href="#!"><img class="card-img-top" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhBaFwUtHV5PRfq8Ah8cPyxWkMpb43gk-tMUH6FsfWMnTr2wTUkeOqqWpet7JOTdPTGNO-W-2jotnDY5wJ12dr5Y3YaLLKLxs2GsdixIJRrOMA9KN2ocYE8zoDYSzP0ftHXJlozZz6aLfX2cDEi_zbUe7CHU0bs8pQkizvQH42ubk9iNT3SZ8RRJzcgjzd3/s1600/Villarreal%20X%20Atletico%20Madrid.jpg" alt="..." /></a>
                         <div class="card-body">
-                            <div class="small text-muted">January 1, 2023</div>
-                            <h2 class="card-title">Featured Post Title</h2>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam. Dicta expedita corporis animi vero voluptate voluptatibus possimus, veniam magni quis!</p>
-                            <a class="btn btn-primary" href="#!">Read more →</a>
+                            <div class="small text-muted">20 de Agosto del 2024</div>
+                            <h2 class="card-title">Fluminense vs Grêmio</h2>
+                            <p class="card-text">Este Martes, 20 de Agosto del 2024 a las 18:00 horas (Miami) se enfrentarán Fluminense vs Grêmio en el Estadio Maracaná. El partido es válido por los Octavos de Final de la Copa Libertadores.</p>
+                            <a class="btn btn-primary" href="post/1.html">Read more →</a>
                         </div>
                     </div>
                     <!-- Nested row for non-featured blog posts-->
