--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Blog Home - Start Bootstrap Template</title>
+        <title>El mejor portal de noticias deportivas del Paraguay. Entérate de noticias al instante en vivo y en directo solo por nuestra web. Fútbol Play TV.</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
@@ -15,11 +15,11 @@
         <!-- Responsive navbar-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
             <div class="container">
-                <a class="navbar-brand" href="#!">Start Bootstrap</a>
+                <a class="navbar-brand" href="https://futbolparaguayotv.github.io/">FutPlay tv</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://futbolparaguayotv.github.io/">Inicio</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
                         <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
                         <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Blog</a></li>
@@ -31,8 +31,8 @@
         <header class="py-5 bg-light border-bottom mb-4">
             <div class="container">
                 <div class="text-center my-5">
-                    <h1 class="fw-bolder">Welcome to Blog Home!</h1>
-                    <p class="lead mb-0">A Bootstrap 5 starter layout for your next blog homepage</p>
+                    <h1 class="fw-bolder">El mejor portal de noticias deportivas del Paraguay. </h1>
+                    <p class="lead mb-0">Entérate de noticias al instante en vivo y en directo solo por nuestra web. Fútbol Play TV</p>
                 </div>
             </div>
         </header>
@@ -46,7 +46,7 @@
                         <a href="post/1.html"><img class="card-img-top" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhBaFwUtHV5PRfq8Ah8cPyxWkMpb43gk-tMUH6FsfWMnTr2wTUkeOqqWpet7JOTdPTGNO-W-2jotnDY5wJ12dr5Y3YaLLKLxs2GsdixIJRrOMA9KN2ocYE8zoDYSzP0ftHXJlozZz6aLfX2cDEi_zbUe7CHU0bs8pQkizvQH42ubk9iNT3SZ8RRJzcgjzd3/s1600/Villarreal%20X%20Atletico%20Madrid.jpg" alt="..." /></a>
                         <div class="card-body">
                             <div class="small text-muted">20 de Agosto del 2024</div>
-                            <h2 a class="btn btn-primary" href="post/1.html" class="card-title">Fluminense vs Grêmio</h2>
+                            <h2 class="card-title">Fluminense vs Grêmio</h2>
                             <p class="card-text">Este Martes, 20 de Agosto del 2024 a las 18:00 horas (Miami) se enfrentarán Fluminense vs Grêmio en el Estadio Maracaná. El partido es válido por los Octavos de Final de la Copa Libertadores.</p>
                             <a class="btn btn-primary" href="post/1.html">Read more →</a>
                         </div>
