--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>El mejor portal de noticias deportivas del Paraguay. Entérate de noticias al instante en vivo y en directo solo por nuestra web. Fútbol Play TV.</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/futbolparaguayotv/futbolparaguayotv.github.io/main/assets/favicon.png" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
     </head>
