--- a/index.html
+++ b/index.html
@@ -56,44 +56,44 @@
                         <div class="col-lg-6">
                             <!-- Blog post-->
                             <div class="card mb-4">
-                                <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
+                                <a href="post/2.html"><img class="card-img-top" src="https://media.tycsports.com/files/2024/08/18/755629/cusco-fc-vs-universitario-en-vivo-como-llegan-al-partido_862x485_wmk.webp" alt="..." /></a>
                                 <div class="card-body">
-                                    <div class="small text-muted">January 1, 2023</div>
-                                    <h2 class="card-title h4">Post Title</h2>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                                    <a class="btn btn-primary" href="#!">Read more →</a>
+                                    <div class="small text-muted">20 de Agosto del 2024</div>
+                                    <h2 class="card-title h4">Cusco vs Universitario</h2>
+                                    <p class="card-text">Este Martes, 20 de Agosto del 2024 a las 18:30 horas (Miami) se enfrentarán Cusco vs Universitario en el Estadio Inca Garcilaso de la Vega. El partido es válido por la Jornada 08 de la Liga 1 Peru.</p>
+                                    <a class="btn btn-primary" href="post/2.html">Read more →</a>
                                 </div>
                             </div>
                             <!-- Blog post-->
                             <div class="card mb-4">
-                                <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
+                                <a href="post/3.html"><img class="card-img-top" src="https://media.tycsports.com/files/2024/08/18/755663/deportivo-cali-vs-santa-fe-en-vivo-como-llegan-al-partido_862x485_wmk.webp" alt="..." /></a>
                                 <div class="card-body">
-                                    <div class="small text-muted">January 1, 2023</div>
-                                    <h2 class="card-title h4">Post Title</h2>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                                    <a class="btn btn-primary" href="#!">Read more →</a>
+                                    <div class="small text-muted">20 de Agosto del 2024</div>
+                                    <h2 class="card-title h4">Deportivo Cali vs Santa Fe</h2>
+                                    <p class="card-text">Este Martes, 20 de Agosto del 2024 a las 20:00 horas (Miami) se enfrentarán Deportivo Cali vs Santa Fe en el Estadio Deportivo Cali. El partido es válido por la Jornada 06 de la Liga BetPlay</p>
+                                    <a class="btn btn-primary" href="post/3.html">Read more →</a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-lg-6">
                             <!-- Blog post-->
                             <div class="card mb-4">
-                                <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
+                                <a href="post/4.html"><img class="card-img-top" src="https://media.tycsports.com/files/2024/08/18/755674/junior-vs-colo-colo-en-vivo-como-llegan-al-partido_862x485_wmk.webp" alt="..." /></a>
                                 <div class="card-body">
-                                    <div class="small text-muted">January 1, 2023</div>
-                                    <h2 class="card-title h4">Post Title</h2>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla.</p>
-                                    <a class="btn btn-primary" href="#!">Read more →</a>
+                                    <div class="small text-muted">20 de Agosto del 2024</div>
+                                    <h2 class="card-title h4">Junior vs Colo Colo</h2>
+                                    <p class="card-text">Este Martes, 20 de Agosto del 2024 a las 20:30 horas (Miami) se enfrentarán Junior vs Colo Colo en el Estadio Metropolitano Roberto Meléndez. El partido es válido por los Octavos de Final de la Copa Libertadores.</p>
+                                    <a class="btn btn-primary" href="post/4.html">Read more →</a>
                                 </div>
                             </div>
                             <!-- Blog post-->
                             <div class="card mb-4">
-                                <a href="#!"><img class="card-img-top" src="https://dummyimage.com/700x350/dee2e6/6c757d.jpg" alt="..." /></a>
+                                <a href="post/5.html"><img class="card-img-top" src="https://media.tycsports.com/files/2024/08/18/755675/atletico-mineiro-vs-san-lorenzo-en-vivo-como-llegan-al-partido_862x485_wmk.webp" alt="..." /></a>
                                 <div class="card-body">
-                                    <div class="small text-muted">January 1, 2023</div>
-                                    <h2 class="card-title h4">Post Title</h2>
-                                    <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Reiciendis aliquid atque, nulla? Quos cum ex quis soluta, a laboriosam.</p>
-                                    <a class="btn btn-primary" href="#!">Read more →</a>
+                                    <div class="small text-muted">20 de Agosto del 2024</div>
+                                    <h2 class="card-title h4">Atletico Mineiro vs San Lorenzo</h2>
+                                    <p class="card-text">Este Martes, 20 de Agosto del 2024 a las 20:30 horas (Miami) se enfrentarán Atletico Mineiro vs San Lorenzo en el Estadio Arena MRV. El partido es válido por los Octavos de Final de la Copa Libertadores.</p>
+                                    <a class="btn btn-primary" href="post/5.html">Read more →</a>
                                 </div>
                             </div>
                         </div>
