--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <div class="collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
                         <li class="nav-item"><a class="nav-link" href="https://futbolparaguayotv.github.io/">Inicio</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">About</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#!">Contact</a></li>
-                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Blog</a></li>
+                        <li class="nav-item"><a class="nav-link" href="post/politica.html">Politica de Privacidad</a></li>
+                        <li class="nav-item"><a class="nav-link" href="https://www.mediafire.com/file/4qgjxjxyjtf15sb/Futbolplay.apk/file">Aplicación</a></li>
+                        <li class="nav-item"><a class="nav-link active" aria-current="page" href="https://www.futbolparaguayotv.xyz/p/apoyo.html">Apoyo</a></li>
                     </ul>
                 </div>
             </div>
